<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shira.control.DetailRideActivity">

    <EditText
        android:id="@+id/clientNameStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text|textCapSentences|textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumStr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/phoneNumStr"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phoneNumStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/emailAddStr"
        app:layout_constraintStart_toStartOf="@+id/emailAddStr"
        app:layout_constraintTop_toBottomOf="@+id/clientNameStr" />

    <EditText
        android:id="@+id/emailAddStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/PickUpTimeText"
        app:layout_constraintStart_toStartOf="@+id/PickUpTimeText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumStr" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="23dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PickUpTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/pickup_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="@+id/loctionAddress"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/loctionAddress"
        app:layout_constraintTop_toBottomOf="@+id/emailAddStr" />

    <EditText
        android:id="@+id/loctionAddress"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/pickup_loctaion"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/destinationTtext"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/destinationTtext"
        app:layout_constraintTop_toBottomOf="@+id/PickUpTimeText" />

    <EditText
        android:id="@+id/destinationTtext"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/destination"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/buttonDone"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/buttonDone"
        app:layout_constraintTop_toBottomOf="@+id/loctionAddress" />

    <Button
        android:id="@+id/LocationButton"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/map"
        android:contentDescription="get current location"
        app:layout_constraintBottom_toBottomOf="@+id/loctionAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toEndOf="@+id/loctionAddress"
        app:layout_constraintTop_toTopOf="@+id/loctionAddress"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
